# jsonviewer

./: .gitignore  JsonViewerGUI.py  JsonViewerGUI.wxg  MainFrame.py  README.html  README.md  app.py  buildCUI.bat  buildEXE.bat  buildGUI.bat  jsonviewer.py  jsonviewer_gui.py  make_resource_file.py  packages.txt  pyproject.toml  requirements.txt  sample-broken.json  sample.json
Licenses/: LICENSE
Licenses/Python/: python-licenses.txt
doc/: manual.html  manual.md
res/: app_icon.py
resource_data/: 00-MainWindow.pdn
